--- a/src/main/resources/hudson/plugins/disk_usage/DiskUsageProjectActionFactory/global_fr.properties
+++ b/src/main/resources/hudson/plugins/disk_usage/DiskUsageProjectActionFactory/global_fr.properties
@@ -20,5 +20,6 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 # THE SOFTWARE.
 
-Disk\ usage=Utilisation disque
-Show\ disk\ usage\ trend\ graph\ on\ the\ project\ page=Montrer le graphique de tendance d''utilisation disque sur la page du projet
+Disk\ usage=Utilisation du disque
+Show\ disk\ usage\ trend\ graph\ on\ the\ project\ page=Montrer le graphique de tendance d''utilisation du disque sur la page du projet
+OverallGraphHistoryLength=Taille du graphique d''historique (jours)
