--- a/src/main/resources/hudson/plugins/disk_usage/DiskUsageProjectActionFactory/global_zh_TW.properties
+++ b/src/main/resources/hudson/plugins/disk_usage/DiskUsageProjectActionFactory/global_zh_TW.properties
@@ -22,4 +22,4 @@
 
 Disk\ usage=\u78c1\u789f\u7528\u91cf
 Show\ disk\ usage\ trend\ graph\ on\ the\ project\ page=\u5728\u5c08\u6848\u9801\u9762\u4e2d\u986f\u793a\u78c1\u789f\u7528\u91cf\u8da8\u52e2\u5716
-Overall\ graph\ history\ length\ (days)=\u6574\u9ad4\u5716\u8868\u6b77\u53f2\u9577\u5ea6 (\u5929)
+OverallGraphHistoryLength=\u6574\u9ad4\u5716\u8868\u6b77\u53f2\u9577\u5ea6 (\u5929)
