Configure time out for calculation disk usage of workspace

--- a/src/main/resources/hudson/plugins/disk_usage/DiskUsageProjectActionFactory/global_fr.properties
+++ b/src/main/resources/hudson/plugins/disk_usage/DiskUsageProjectActionFactory/global_fr.properties
@@ -23,3 +23,4 @@
 Disk\ usage=Utilisation du disque
 Show\ disk\ usage\ trend\ graph\ on\ the\ project\ page=Montrer le graphique de tendance d''utilisation du disque sur la page du projet
 OverallGraphHistoryLength=Taille du graphique d''historique (jours)
+TimeoutWorkspace=Timeout pour calculer l''espace disque d''un workspace d''un projet (minutes).
