--- a/src/main/resources/hudson/plugins/disk_usage/DiskUsagePlugin/index_fr.properties
+++ b/src/main/resources/hudson/plugins/disk_usage/DiskUsagePlugin/index_fr.properties
@@ -28,5 +28,5 @@ Workspace=Espace de travail
 Project\ name=Nom du projet
 Disk\ usage=Utilisation du disque
 Record\ Disk\ Usage=Analyser l''utilisation du disque
-Interval.Message=L''utilisation du disque est calcul\u00e9 toutes les {0} minutes. Si vous voulez lancer le calcul maintenant, cliquer sur le bouton.
+Interval.Message=L''utilisation du disque est calcul\u00e9e toutes les {0} minutes. Si vous voulez lancer le calcul maintenant, cliquez sur le bouton.
 Disk\ Usage\ Trend=Tendance d''utilisation du disque
