[JENKINS-22721] Project page has broken layout on smaller screens
- Disk usage text information moved from floating box for graph to the job main area which is more suitable for it.
- The information is rendered as a file list table used e.g. for the build artifacts and contain the same informations as before.
- Directory icon aded, the same icon is used for workspace in Jenkins.
- Graph width updated from 550 px to 500 px to be the same as for other graphs.
- There were two vertical axis in the graph, but the description "disk usage" was the same for both, which was confusing for the user. Fixed.
- Brackets for units "(MB)" updated to use standard "[MB]".
- Legend moved to the bottom of the graph and the descriptions updated to be shorter to have more space for the real graph data.
- Hardcoded strings moved to Messages to add support for their translations.
- Indentation fixed.

--- a/src/main/resources/hudson/plugins/disk_usage/Messages.properties
+++ b/src/main/resources/hudson/plugins/disk_usage/Messages.properties
@@ -1,4 +1,10 @@
-DisplayName=Disk usage
+DisplayName=Disk Usage
 UrlName=diskUsage
 Description=Displays per-project disk usage
-ProjectDiskUsage =disk usage
+
+DiskUsage.Graph.JobDiskUsageAxis=job, builds
+DiskUsage.Graph.WorkspaceDiskUsageAxis=workspaces
+DiskUsage.Graph.JobDirectory=job
+DiskUsage.Graph.BuildDirectory=builds
+DiskUsage.Graph.SlaveWorkspaces=slave workspaces
+DiskUsage.Graph.NonSlaveWorkspaces=non-slave workspaces
