Replace all instances of Slave with Agent and slave with agent

--- a/src/main/resources/hudson/plugins/disk_usage/Messages.properties
+++ b/src/main/resources/hudson/plugins/disk_usage/Messages.properties
@@ -6,5 +6,5 @@ DiskUsage.Graph.JobDiskUsageAxis=job, builds
 DiskUsage.Graph.WorkspaceDiskUsageAxis=workspaces
 DiskUsage.Graph.JobDirectory=job
 DiskUsage.Graph.BuildDirectory=builds
-DiskUsage.Graph.SlaveWorkspaces=slave workspaces
-DiskUsage.Graph.NonSlaveWorkspaces=non-slave workspaces
+DiskUsage.Graph.AgentWorkspaces=agent workspaces
+DiskUsage.Graph.NonAgentWorkspaces=non-agent workspaces
