Fixes Correctness category identified by spotbugs

--- a/src/main/resources/hudson/plugins/disk_usage/Messages.properties
+++ b/src/main/resources/hudson/plugins/disk_usage/Messages.properties
@@ -1,6 +1,6 @@
-DisplayName=Disk Usage
-UrlName=diskUsage
-Description=Displays per-project disk usage
+displayName=Disk Usage
+urlName=diskUsage
+description=Displays per-project disk usage
 
 DiskUsage.Graph.JobDiskUsageAxis=job, builds
 DiskUsage.Graph.WorkspaceDiskUsageAxis=workspaces
