--- a/src/main/resources/hudson/plugins/disk_usage/Messages_fr.properties
+++ b/src/main/resources/hudson/plugins/disk_usage/Messages_fr.properties
@@ -1,4 +1,3 @@
-DisplayName=Utilisation du disque
-UrlName=diskUsage
-Description=Affiche l''utilisation du disque pour chaque projet
-ProjectDiskUsage=Utilisation du disque
+displayName=Utilisation du disque
+urlName=diskUsage
+description=Affiche l''utilisation du disque pour chaque projet
