--- a/src/main/resources/hudson/plugins/disk_usage/Messages_zh_TW.properties
+++ b/src/main/resources/hudson/plugins/disk_usage/Messages_zh_TW.properties
@@ -20,7 +20,6 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 # THE SOFTWARE.
 
-DisplayName=\u78c1\u789f\u7528\u91cf
-UrlName=diskUsage
-Description=\u986f\u793a\u500b\u5225\u5c08\u6848\u7684\u78c1\u789f\u7528\u91cf
-ProjectDiskUsage=\u78c1\u789f\u7528\u91cf
+displayName=\u78c1\u789f\u7528\u91cf
+urlName=diskUsage
+description=\u986f\u793a\u500b\u5225\u5c08\u6848\u7684\u78c1\u789f\u7528\u91cf
