--- a/src/main/resources/hudson/plugins/disk_usage/Messages_ja.properties
+++ b/src/main/resources/hudson/plugins/disk_usage/Messages_ja.properties
@@ -20,7 +20,6 @@
 # OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 # THE SOFTWARE.
 
-DisplayName=\u30c7\u30a3\u30b9\u30af\u4f7f\u7528\u91cf
-UrlName=diskUsage
-Description=\u30c7\u30a3\u30b9\u30af\u4f7f\u7528\u91cf\u3092\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3054\u3068\u306b\u8868\u793a\u3057\u307e\u3059\u3002
-ProjectDiskUsage=\u30c7\u30a3\u30b9\u30af\u4f7f\u7528\u91cf
+displayName=\u30c7\u30a3\u30b9\u30af\u4f7f\u7528\u91cf
+urlName=diskUsage
+description=\u30c7\u30a3\u30b9\u30af\u4f7f\u7528\u91cf\u3092\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u3054\u3068\u306b\u8868\u793a\u3057\u307e\u3059\u3002
