Fix spotbugs warning - invalid method name

--- a/src/main/resources/hudson/plugins/disk_usage/Messages.properties
+++ b/src/main/resources/hudson/plugins/disk_usage/Messages.properties
@@ -8,4 +8,4 @@ DiskUsage.Graph.JobDirectory=job
 DiskUsage.Graph.BuildDirectory=builds
 DiskUsage.Graph.AgentWorkspaces=agent workspaces
 DiskUsage.Graph.NonAgentWorkspaces=non-agent workspaces
-InvalidCrontab=Invalid cron {0}
+invalidCrontab=Invalid cron {0}
